@@ -4921,6 +4921,10 @@ argument_list|)
 decl_stmt|;
 if|if
 condition|(
+name|cname
+operator|==
+literal|null
+operator|||
 operator|!
 name|coreContainer
 operator|.
